# exacto

./: Cargo.toml  README.md
ballistic_calculator/: Cargo.toml
ballistic_calculator/src/: lib.rs  physics.rs
firmware/: Cargo.toml
firmware/src/: ballistic_calculator.rs  embedded_graphics_transform.rs  main.rs  physics.rs  settings.rs  sight.rs
firmware/src/settings/: rendering.rs  sub_menus.rs  ui.rs
firmware/src/settings/sub_menus/: about_page.rs  sight_menu.rs
firmware/src/settings/ui/: settings_page.rs
fraction/: Cargo.toml
fraction/src/: lib.rs
hardware/cad/: body.FCStd  body.FCStd1
hardware/display/: display.md
hardware/lens/: lense.avif
src/: ballistic_calculator.rs  display_initialisation.rs  encoder.rs  fraction.rs  main.rs  physics.rs  settings.rs  sight.rs
src/settings/: rendering.rs  sub_menus.rs  ui.rs
src/settings/sub_menus/: about_page.rs  main_menu.rs  sight_menu.rs
src/settings/ui/: settings_page.rs
