[package]
name = "exacto"
version = "0.1.0"
authors = ["AGrabski <adam.gr@outlook.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"


[[bin]]
name = "exacto"
test = false
bench = false

[dependencies]
panic-halt = "1.0.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "1.0"
display-interface-spi = "0.5.0"
display-interface = "0.5.0"
embedded-graphics-core = { version = "0.4"}
embedded-graphics = "0.8.1"
ssd1351="0.5.0"
const_format = "0.2.34"
[dependencies.byte-slice-cast]
version = "1.2.2"
default-features = false

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "fafaf587a32a4500239fd073f89d1b9c36b48092"
features = ["arduino-uno"]



# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = false
lto = true
opt-level = "z"
strip = true  # Automatically strip symbols from the binary.

[features]
default = ["graphics"]
graphics = []
buffered = []
