[workspace]
resolver = "3"
members = ["firmware", "fraction"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = false
lto = true
opt-level = "z"
strip = true  # Automatically strip symbols from the binary.

