[workspace]
resolver = "3"
members = ["ballistic_calculator", "firmware", "fraction"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = false
opt-level = 0

[profile.release]
panic = "abort"
codegen-units = 1
debug = false
lto = true
opt-level = "z"
strip = true  # Automatically strip symbols from the binary.

